--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
             <a href="index.html">
                 <li class="navbar__menu__item">지도</li>
             </a>
-            <a href="board.html">
+            <a href="board/list.php">
                 <li class="navbar__menu__item">게시판</li>
             </a>
         </ul>
